--- a/nx.json
+++ b/nx.json
@@ -38,5 +38,12 @@
       },
       "exclude": ["apps/food-mine-be-e2e/**/*"]
     }
-  ]
+  ],
+  "targetDefaults": {
+    "@nx/js:tsc": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
+    }
+  }
 }
