--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 
-DATABASE_NAME='foodMine'
-DATABASE_URL='mongodb+srv://longnh:long1234@foodmine.m1ure58.mongodb.net/'
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+DATABASE_URL="postgresql://longnh:2709@localhost:5432/foodmine?schema=public"
+# DATABASE_NAME='foodMine'
+# DATABASE_URL='mongodb+srv://longnh:long1234@foodmine.m1ure58.mongodb.net/'
