--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^10.0.2",
-    "axios": "^1.6.0",
-    "mongoose": "^8.7.1",
+    "@prisma/client": "^6.2.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -39,7 +39,6 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "~18.16.9",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -47,6 +46,7 @@
     "jest-environment-node": "^29.7.0",
     "nx": "20.0.0",
     "prettier": "^2.6.2",
+    "prisma": "^6.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
