--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:prod": "nx run food-mine-be:build:production",
     "db:dev:rm": "docker compose rm dev-db -s -f -v",
     "db:dev:up": "docker compose up dev-db -d",
-    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 1 && nx run prisma-schema:migrate"
+    "db:dev:restart": "npm run db:dev:rm && npm run db:dev:up && sleep 1 && nx run prisma-schema:migrate",
+    "prisma-schema:update": "nx run prisma-schema:migrate && nx run prisma-schema:generate-types"
   },
   "private": true,
   "dependencies": {
@@ -18,10 +19,14 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^6.2.0",
+    "argon2": "^0.41.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0"
   },
@@ -43,6 +48,7 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/passport-jwt": "^4.0.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
